cluster/kubernetes/traefik/internal-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-igro
  namespace: traefik
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/`)
    services:
    - kind: TraefikService
      name: api@internal
