cluster/kubernetes/traefik/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    # kubernetes.io/ingress.class: traefik
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "aaa.com"
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: hades-nginx
            port:
              number: 80
